k8s-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-analytics-service
  namespace: production
  labels:
    app: prod-analytics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-analytics-service
  template:
    metadata:
      labels:
        app: prod-analytics-service
    spec:
      containers:
      - name: prod-analytics-service
        image: 543900120763.dkr.ecr.us-west-2.amazonaws.com/prod-analytics-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 300
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: prod-analytics-service
  namespace: production
spec:
  selector:
    app: prod-analytics-service
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-analytics-service-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:543900120763:certificate/e22a815e-b439-4178-b5fa-a4fa17b0b623
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: prod-analytics-service.devingtools.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-analytics-service
            port:
              number: 8000
